# zabbix-cli-plugin-entrypoint

./: .pre-commit-config.yaml  README.md  pyproject.toml  sample_config.toml
tests/: conftest.py  test_plugin.py
zabbix_cli_plugin_entrypoint/: plugin.py  results.py
