[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-cli-plugin-entrypoint"
version = "0.1.0"
description = "Plugin for Zabbix CLI using entrypoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zabbix-cli@git+https://github.com/pederhan/zabbix-cli.git@command-plugins",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points.'zabbix-cli.plugins']
module = "zabbix_cli_plugin_entrypoint.plugin"
