[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-cli-plugin-entrypoint"
version = "0.1.0"
description = "Plugin for Zabbix CLI using entrypoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zabbix-cli@git+https://github.com/pederhan/zabbix-cli.git@command-plugins",
]

[project.optional-dependencies]
test = ["pytest", "inline-snapshot"]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points.'zabbix-cli.plugins']
# The key should be the name of your plugin, and the value should be the import path to the plugin.
# The name of the plugin should match the name used in the zabbix-cli configuration file.
# So in this case, the matching configuration would be:
# [plugins.zabbix_cli_plugin_entrypoint]
zabbix_cli_plugin_entrypoint = "zabbix_cli_plugin_entrypoint.plugin"


# Optional Pyright configuration

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

# Optional Ruff configuration

[tool.ruff]
src = ["zabbix_cli_plugin_entrypoint"]
extend-include = [
    "pyproject.toml",
    "zabbix_cli_plugin_entrypoint/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
# Force one line per import to simplify diffing and merging
force-single-line = true
# Add annotations import to every file
required-imports = ["from __future__ import annotations"]
